--- a/src/unnamedlibrary/unnamedRegisterMenu.form
+++ b/src/unnamedlibrary/unnamedRegisterMenu.form
@@ -102,6 +102,7 @@
                   <Font name="Leelawadee UI" size="18" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Return"/>
+                <Property name="toolTipText" type="java.lang.String" value="Returns to login menu."/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                   <Color id="Hand Cursor"/>
                 </Property>
@@ -199,6 +200,7 @@
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Register"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Creates the librarian account."/>
                         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                           <Color id="Hand Cursor"/>
                         </Property>
@@ -213,6 +215,7 @@
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
                         <Property name="text" type="java.lang.String" value="Reset"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Empties the fields from existing values."/>
                         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                           <Color id="Hand Cursor"/>
                         </Property>
@@ -414,6 +417,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
+                        <Property name="toolTipText" type="java.lang.String" value="First name of the client."/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="txtLibrarianLastName">
@@ -421,6 +425,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
+                        <Property name="toolTipText" type="java.lang.String" value="Last name of the client."/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JFormattedTextField" name="txtLibrarianDoB">
@@ -428,6 +433,7 @@
                         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                           <Format format="dd/MM/yyyy" subtype="-1" type="1"/>
                         </Property>
+                        <Property name="toolTipText" type="java.lang.String" value="Date of birth of the client."/>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
@@ -438,6 +444,7 @@
                         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
                           <Format format="##########" subtype="-1" type="5"/>
                         </Property>
+                        <Property name="toolTipText" type="java.lang.String" value="Phone number of the client."/>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
@@ -448,6 +455,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
+                        <Property name="toolTipText" type="java.lang.String" value="Email address of the client."/>
                       </Properties>
                       <Events>
                         <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtLibrarianEmailAddressFocusLost"/>
@@ -468,6 +476,8 @@
                             </Property>
                             <Property name="lineWrap" type="boolean" value="true"/>
                             <Property name="rows" type="int" value="3"/>
+                            <Property name="toolTipText" type="java.lang.String" value="Home address of the client."/>
+                            <Property name="wrapStyleWord" type="boolean" value="true"/>
                           </Properties>
                         </Component>
                       </SubComponents>
@@ -493,6 +503,7 @@
                             <StringItem index="2" value="Female"/>
                           </StringArray>
                         </Property>
+                        <Property name="toolTipText" type="java.lang.String" value="Selects the gender of the client."/>
                         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                           <Color id="Hand Cursor"/>
                         </Property>
@@ -533,6 +544,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
+                        <Property name="toolTipText" type="java.lang.String" value="Username of the librarian."/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JPasswordField" name="txtLibrarianPassword">
@@ -540,7 +552,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
-                        <Property name="toolTipText" type="java.lang.String" value="Insert your password"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Password of the librarian."/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JPasswordField" name="txtLibrarianRepeatPass">
@@ -548,7 +560,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Leelawadee UI" size="18" style="0"/>
                         </Property>
-                        <Property name="toolTipText" type="java.lang.String" value="Insert your password"/>
+                        <Property name="toolTipText" type="java.lang.String" value="Repeat password of the librarian."/>
                       </Properties>
                     </Component>
                   </SubComponents>
